Add adapted resize script
The changes make sure we resize when the writable partition is already
as big as possible but the filesystem has not grown inside it.

--- a/tx1/snapcraft.yaml
+++ b/tx1/snapcraft.yaml
@@ -32,6 +32,13 @@ parts:
       - curl
       - build-essential
 
+  initramfs:
+    after: [ kernel ]
+    plugin: nil
+    source: ../initramfs
+    override-build: |
+      find . | cpio --quiet -o -H newc | lzma >> "$SNAPCRAFT_STAGE"/initrd.img
+
   firmware:
     plugin: nil
     override-build: |
