--- a/tx1/snapcraft.yaml
+++ b/tx1/snapcraft.yaml
@@ -15,8 +15,11 @@ parts:
       snapcraftctl pull
       # Get kernel sources, which are distributed across different repos
       ./source_sync.sh -k tegra-l4t-r28.2.1
-      cd sources/kernel/kernel-4.4
       # Apply canonical patches - apparmor stuff essentially
+      cd sources/kernel/display
+      git am ../../../patch-display/*
+      cd -
+      cd sources/kernel/kernel-4.4
       git am ../../../patch/*
     override-build: |
       JETSON_KERNEL_CONFIG=tegra21_defconfig ./build.sh
