Import source_sync.sh from L4T 32.1, move old one
We take latest source_sync.sh for TX2, but we need to keep around the
L4T 28.2.0 one for TX1, as that is the last L4T version that supports
the TX1.

--- a/tx1/snapcraft.yaml
+++ b/tx1/snapcraft.yaml
@@ -14,7 +14,7 @@ parts:
     override-pull: |
       snapcraftctl pull
       # Get kernel sources, which are distributed across different repos
-      ./source_sync.sh -k tegra-l4t-r28.2.1
+      ./l4t_28.2.0/source_sync.sh -k tegra-l4t-r28.2.1
       # Apply canonical patches - apparmor stuff essentially
       cd sources/kernel/display
       git am ../../../patch-display/*
