--- a/tx1/snapcraft.yaml
+++ b/tx1/snapcraft.yaml
@@ -14,7 +14,8 @@ parts:
     override-pull: |
       snapcraftctl pull
       # Get kernel sources, which are distributed across different repos
-      ./l4t_28.2.0/source_sync.sh -k tegra-l4t-r28.2.1
+      mv l4t_28.2.0/source_sync.sh .
+      ./source_sync.sh -k tegra-l4t-r28.2.1
       # Apply canonical patches - apparmor stuff essentially
       cd sources/kernel/display
       git am ../../../patch-display/*
