Copy USB firmware to initramfs
This way we make sure we are always able to load it, otherwise it was
possible that the driver gave up trying to upload when not found.

--- a/tx1/snapcraft.yaml
+++ b/tx1/snapcraft.yaml
@@ -37,13 +37,6 @@ parts:
       - curl
       - build-essential
 
-  initramfs:
-    after: [ kernel ]
-    plugin: nil
-    source: ../initramfs
-    override-build: |
-      find . | cpio --quiet -o -H newc | lzma >> "$SNAPCRAFT_STAGE"/initrd.img
-
   firmware:
     plugin: nil
     override-build: |
@@ -65,3 +58,12 @@ parts:
       ln -sf "../tegra21x/pmu_bl.bin" "pmu_bl.bin"
       ln -sf "../tegra21x/fecs.bin" "fecs.bin"
       ln -sf "../tegra21x/gpccs.bin" "gpccs.bin"
+
+  initramfs:
+    after: [ kernel, firmware ]
+    plugin: nil
+    source: ../initramfs
+    override-build: |
+      mkdir -p lib/firmware
+      cp "$SNAPCRAFT_STAGE"/firmware/tegra*_xusb_firmware lib/firmware/
+      find . | cpio --quiet -o -H newc | lzma >> "$SNAPCRAFT_STAGE"/initrd.img
