--- a/nano/snapcraft.yaml
+++ b/nano/snapcraft.yaml
@@ -43,6 +43,19 @@ parts:
       tar xf Jetson-Nano-Tegra210_Linux_R32.1.0_aarch64.tbz2 Linux_for_Tegra/nv_tegra/nvidia_drivers.tbz2
       tar xf Linux_for_Tegra/nv_tegra/nvidia_drivers.tbz2 lib/firmware/
       cd lib; cp -r firmware/ "$SNAPCRAFT_PART_INSTALL"
+      mkdir -p "$SNAPCRAFT_PART_INSTALL"/firmware/gm20b
+      cd "$SNAPCRAFT_PART_INSTALL"/firmware/gm20b
+      ln -sf "../tegra21x/acr_ucode.bin" "acr_ucode.bin"
+      ln -sf "../tegra21x/gpmu_ucode.bin" "gpmu_ucode.bin"
+      ln -sf "../tegra21x/gpmu_ucode_desc.bin" "gpmu_ucode_desc.bin"
+      ln -sf "../tegra21x/gpmu_ucode_image.bin" "gpmu_ucode_image.bin"
+      ln -sf "../tegra21x/gpu2cde.bin" "gpu2cde.bin"
+      ln -sf "../tegra21x/NETB_img.bin" "NETB_img.bin"
+      ln -sf "../tegra21x/fecs_sig.bin" "fecs_sig.bin"
+      ln -sf "../tegra21x/pmu_sig.bin" "pmu_sig.bin"
+      ln -sf "../tegra21x/pmu_bl.bin" "pmu_bl.bin"
+      ln -sf "../tegra21x/fecs.bin" "fecs.bin"
+      ln -sf "../tegra21x/gpccs.bin" "gpccs.bin"
 
   initramfs:
     after: [ kernel, firmware ]
