--- a/tx1/snapcraft.yaml
+++ b/tx1/snapcraft.yaml
@@ -5,6 +5,7 @@ description: nvidia Jetson TX1 kernel
 grade: stable
 confinement: strict
 type: kernel
+base: core18
 architectures: [arm64]
 
 parts:
