--- a/tx2/snapcraft.yaml
+++ b/tx2/snapcraft.yaml
@@ -5,6 +5,7 @@ description: nvidia Jetson TX2 kernel
 grade: stable
 confinement: strict
 type: kernel
+base: core18
 architectures: [ arm64 ]
 
 parts:
