all: use build-base for all kernel snaps
'build-base' is required to enable latest snapcraft features for kernel
snaps (note that 'base' is not valid for this snap type). We set
core18 as the build environment, as we are building for UC18.

--- a/xavier/snapcraft.yaml
+++ b/xavier/snapcraft.yaml
@@ -5,7 +5,7 @@ description: nvidia Jetson Xavier kernel
 grade: stable
 confinement: strict
 type: kernel
-build-base: kernel
+build-base: core18
 architectures: [ arm64 ]
 
 parts:
