--- a/nano/snapcraft.yaml
+++ b/nano/snapcraft.yaml
@@ -5,7 +5,7 @@ description: nvidia Jetson Nano kernel
 grade: stable
 confinement: strict
 type: kernel
-base: core18
+build-base: core18
 architectures: [ arm64 ]
 
 parts:
